# py-php-session

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/php_session/: __init__.py  config.py  constants.py  context.py  decode.py  exceptions.py  manager.py  sanitize.py
src/php_session/contrib/: __init__.py  starlette.py
tests/: __init__.py  conftest.py  test_config.py  test_context.py  test_manager.py  test_middleware.py  test_sanitize.py
