[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-php-session"
version = "0.1.0"
description = "Pure Python PHP session manager using Redis - compatible with PHP redis extension"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "php",
    "session",
    "redis",
    "php-session",
    "session-management",
    "fastapi",
    "starlette",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Typing :: Typed",
]
dependencies = [
    "redis>=5.0.0",
    "phpserialize-typed>=1.0.0",
]

[project.optional-dependencies]
starlette = [
    "starlette>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-redis>=4.6.0",
]
all = [
    "py-php-session[starlette,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/py-php-session"
Documentation = "https://github.com/yourusername/py-php-session#readme"
Repository = "https://github.com/yourusername/py-php-session"
Issues = "https://github.com/yourusername/py-php-session/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/php_session"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["php_session"]
